# BlackEngineProject

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  README.md  create-package.bat  run.sh  run_from_finder.command
BlackEngineProject.app/Contents/: Info.plist
BlackEngineProject.app/Contents/MacOS/: BlackEngineProject
TileMapEditor.app/Contents/: Info.plist
TileMapEditor.app/Contents/MacOS/: TileMapEditor-bin
assets/maps/: level1.json  level2.json  level3.json  level4.json  map_20250809_183540.grid  map_20250810_130012.grid  map_20250810_225015.grid
cmake/: Entitlements.plist  Info.plist.in  copy_runtime_dlls.cmake
dist-win/lib/: box2d.lib  jsoncpp.lib
dist-win/lib/cmake/box2d/: box2dConfig.cmake
dist-win/lib/cmake/jsoncpp/: jsoncpp-targets-release.cmake  jsoncpp-targets.cmake
dist-win/lib/pkgconfig/: jsoncpp.pc
docs/: API.md  DEVELOPMENT.md  QUICK_REFERENCE.md
include/: Animation.hh  AnimationClip.hh  AudioClip.hh  CommonHeaders.hh  Constants.hh  ContactEventManager.hh  DrawPhysics.hh  FlipSprite.hh  Game.hh  ImGuiManager.hh  InputSystem.hh  Movement.hh  Tile.hh  TileGroup.hh
include/Components/: AnimatorComponent.hh  AudioListenerComponent.hh  Component.hh  Entity.hh  EntityManager.hh  RigidBodyComponent.hh  SpriteComponent.hh  TransformComponent.hh
include/GUI/: Button.hh  TextObject.hh
release-package/: README.txt
release-package/assets/maps/: level2.grid  level2.json  level5.json
src/: Animation.cc  AudioClip.cc  ContactEventManager.cc  DrawPhysics.cc  FlipSprite.cc  Game.cc  ImGuiManager.cc  MapEditorMain.cpp  Movement.cc  Tile.cc  TileGroup.cc  main.cpp
src/Components/: AnimatorComponent.cc  AudioListenerComponent.cc  Entity.cc  EntityManager.cc  RigidBodyComponent.cc  SpriteComponent.cc  TransformComponent.cc
src/GUI/: Button.cc  TextObject.cc
